refactor(cronjob): 重构线程池注册表，委托 common-thread 统一管理
- 移除本地线程池注册表，改为依赖 ydzz-common-thread 的 ThreadPoolRegistry
- 保留 cronjob 特有逻辑：拒绝计数包装、优雅关闭限于本模块线程池
- 线程池注册为幂等操作，已注册同名线程池跳过并打印警告日志
- 移除此模块线程池时仅从跟踪集合移除，不影响全局注册表
- 更新获取所有线程池和指标方法，遍历本模块跟踪名称集合
- 优雅关闭时仅关闭本模块注册的线程池，避免误关全局线程池

refactor(workflow): 明确流程审计日志域内职责与不可变约束

- 详细补充流程审计日志实体、Mapper、仓储接口、实现类及VO的域内职责和独立于通用审计体系的说明
- 明确日志为只追加不可变事实表，禁止修改和删除
- 强调工作流域事件溯源记录的业务价值和设计要点

refactor(workflow): 替换 RedisTemplate 为 RedisPubSubOps 发布消息

- 用 RedisPubSubOps 替代直接注入 RedisTemplate，符合 ydzs-common-redis 封装规范
- 更新消息事件服务中 Redis 发布逻辑，保持功能不变

fix(literule): 修正规则审计日志服务中变量误用问题

- 将名称错误的变量 log 替换为 auditLog，避免潜在空指针和逻辑错误

docs(agent): 补充 SemanticLlmCache 中 StringRedisTemplate 注入说明

- 说明因需要原子性 ZSetOperations.popMin 操作，暂时保留 StringRedisTemplate 注入
- 解释常见替代方法存在的并发竞争风险和设计考量